feat!: Pinecone - support for the new API (#793)
* upgrate to new API

* increase sleep time

* update example

* address feedback

--- a/integrations/pinecone/pyproject.toml
+++ b/integrations/pinecone/pyproject.toml
@@ -24,8 +24,7 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "pinecone-client<3", # our implementation is not compatible with pinecone-client>=3
-  # see https://github.com/deepset-ai/haystack-core-integrations/issues/223
+  "pinecone-client>=3" # our implementation is not compatible with pinecone-client <3
 ]
 
 [project.urls]
