better coverage options

--- a/integrations/pinecone/pyproject.toml
+++ b/integrations/pinecone/pyproject.toml
@@ -145,7 +145,8 @@ ban-relative-imports = "parents"
 [tool.coverage.run]
 source = ["haystack_integrations"]
 branch = true
-parallel = false
+concurrency = multiprocessing
+parallel = true
 
 
 [tool.coverage.report]
