--- a/.github/workflows/pinecone.yml
+++ b/.github/workflows/pinecone.yml
@@ -33,6 +33,12 @@ jobs:
         # Pinecone tests are time expensive, so the matrix is limited to Python 3.9 and 3.10
         os: [ubuntu-latest]
         python-version: ["3.9", "3.10"]
+        # the INDEX_NAME is used in test_serverless_index_creation_from_scratch.
+        include:
+          - python-version: "3.9"
+            INDEX_NAME: "index_39"
+          - python-version: "3.10"
+            INDEX_NAME: "index_310"
 
     steps:
       - uses: actions/checkout@v4
@@ -56,6 +62,8 @@ jobs:
 
       - name: Run tests
         id: tests
+        env:
+          INDEX_NAME: ${{ matrix.INDEX_NAME }}
         run: hatch run cov
 
       - name: Nightly - run unit tests with Haystack main branch
