--- a/.github/workflows/ollama.yml
+++ b/.github/workflows/ollama.yml
@@ -32,16 +32,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python-version: ["3.9","3.10","3.11"]
-        
-    steps:   
+        python-version: ["3.9", "3.10", "3.11"]
+
+    steps:
       - uses: actions/checkout@v4
 
       - name: Install Ollama and pull the required models
         run: |
           curl -fsSL https://ollama.com/install.sh | sh
           ollama serve &
-          
+
           # Check if the service is up and running with a timeout of 60 seconds
           timeout=60
           while [ $timeout -gt 0 ] && ! curl -sSf http://localhost:11434/ > /dev/null; do
@@ -54,7 +54,7 @@ jobs:
             echo "Timed out waiting for Ollama service to start."
             exit 1
           fi
-          
+
           ollama pull ${{ env.LLM_FOR_TESTS }}
           ollama pull ${{ env.EMBEDDER_FOR_TESTS }}
 
@@ -74,23 +74,23 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run docs
 
-      - name: Run tests
-        id: tests
-        run: hatch run cov
+      - name: Run tests with retry
+        uses: Wandalen/wretry.action@v3
+        with:
+          command: hatch run cov
+          attempt_limit: 3
+          attempt_delay: 2000
 
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
-        id: nightly-haystack-main
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
-      
+
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
         uses: ./.github/actions/send_failure
         with:
           title: |
-            core-integrations failure: 
-            ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
-             - ${{ github.workflow }}
+            Core integrations nightly tests failure: ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
