--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -54,9 +54,12 @@ jobs:
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
         run: hatch run lint:all
 
-      - name: Run tests
-        id: tests
-        run: hatch run cov
+      - name: Run tests with retry
+        uses: Wandalen/wretry.action@v3
+        with:
+          command: hatch run cov
+          attempt_limit: 3
+          attempt_delay: 2000
 
       - name: Generate docs
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
@@ -64,7 +67,6 @@ jobs:
 
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
-        id: nightly-haystack-main
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
@@ -74,7 +76,5 @@ jobs:
         uses: ./.github/actions/send_failure
         with:
           title: |
-            core-integrations failure:
-            ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
-             - ${{ github.workflow }}
+            Core integrations nightly tests failure: ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
