--- a/.github/workflows/amazon_bedrock.yml
+++ b/.github/workflows/amazon_bedrock.yml
@@ -63,12 +63,11 @@ jobs:
         run: hatch run docs
 
       - name: Run unit tests
-        id: unit-tests
-        run: hatch run cov -m "not integration"        
+        run: hatch run cov -m "not integration"
 
       # Do not authenticate on pull requests from forks
-      - name: AWS authentication        
-        if: github.event.pull_request.head.repo.full_name == github.repository      
+      - name: AWS authentication
+        if: github.event.pull_request.head.repo.full_name == github.repository
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502
         with:
           aws-region: ${{ env.AWS_REGION }}
@@ -76,13 +75,11 @@ jobs:
 
       # Do not run integration tests on pull requests from forks
       - name: Run integration tests
-        if: github.event.pull_request.head.repo.full_name == github.repository      
-        id: integration-tests
+        if: github.event.pull_request.head.repo.full_name == github.repository
         run: hatch run cov -m "integration"
 
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
-        id: nightly-haystack-main
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
@@ -92,7 +89,5 @@ jobs:
         uses: ./.github/actions/send_failure
         with:
           title: |
-            core-integrations failure:
-            ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
-             - ${{ github.workflow }}
+            Core integrations nightly tests failure: ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
