--- a/.github/workflows/unstructured.yml
+++ b/.github/workflows/unstructured.yml
@@ -8,11 +8,11 @@ on:
   pull_request:
     paths:
       - "integrations/unstructured/**"
-      - ".github/workflows/unstructured.yml" 
+      - ".github/workflows/unstructured.yml"
 
 defaults:
   run:
-    working-directory: integrations/unstructured    
+    working-directory: integrations/unstructured
 
 concurrency:
   group: unstructured-${{ github.head_ref }}
@@ -48,7 +48,7 @@ jobs:
             --health-interval 10s \
             --health-timeout 1s \
             --health-retries 10 \
-            quay.io/unstructured-io/unstructured-api:latest       
+            quay.io/unstructured-io/unstructured-api:latest
 
       - uses: actions/checkout@v4
 
@@ -69,22 +69,18 @@ jobs:
         run: hatch run docs
 
       - name: Run tests
-        id: tests
         run: hatch run cov
 
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
-        id: nightly-haystack-main
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
           hatch run test -m "not integration"
-      
+
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
         uses: ./.github/actions/send_failure
         with:
           title: |
-            core-integrations failure: 
-            ${{ (steps.tests.conclusion == 'nightly-haystack-main') && 'nightly-haystack-main' || 'tests' }}
-             - ${{ github.workflow }}
+            Core integrations nightly tests failure: ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
