--- a/integrations/google_ai/pyproject.toml
+++ b/integrations/google_ai/pyproject.toml
@@ -22,7 +22,10 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = ["haystack-ai", "google-generativeai>=0.3.1"]
+dependencies = [
+  "haystack-ai", 
+  "google-generativeai>=0.3.1, <0.7.1"  # https://github.com/deepset-ai/haystack-core-integrations/issues/855
+]
 
 [project.urls]
 Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/google_ai_haystack#readme"
