Revert haystack-ai dependency, wait for haystack 2.3 release

--- a/integrations/mongodb_atlas/pyproject.toml
+++ b/integrations/mongodb_atlas/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: CPython",
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
-dependencies = ["haystack-ai==2.2.4rc1", "pymongo[srv]"]
+dependencies = ["haystack-ai", "pymongo[srv]"]
 
 [project.urls]
 Source = "https://github.com/deepset-ai/haystack-core-integrations"
