--- a/integrations/weaviate/pyproject.toml
+++ b/integrations/weaviate/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [
   "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dependencies = [
-  "haystack-ai==2.2.4rc1",
+  "haystack-ai",
   "weaviate-client",
   "haystack-pydoc-tools",
   "python-dateutil",
