--- a/.github/workflows/compatibility.yml
+++ b/.github/workflows/compatibility.yml
@@ -30,6 +30,7 @@ jobs:
           for dir in integrations/*; do
             if [ -f "$dir/pyproject.toml" ]; then
               package_name=$(awk -F'[ ="]+' '$1 == "name" {print $2}' $dir/pyproject.toml)
-              python -c "import $package_name" || exit 1
+              import_name=$(echo $package_name | tr '-' '_')
+              python -c "import $import_name" || exit 1
             fi
           done
