--- a/.github/workflows/weaviate.yml
+++ b/.github/workflows/weaviate.yml
@@ -47,7 +47,7 @@ jobs:
         run: hatch run lint:all
 
       - name: Run Weaviate container
-        run: docker-compose up -d
+        run: docker compose up -d
 
       - name: Generate docs
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
