--- a/.github/workflows/pgvector.yml
+++ b/.github/workflows/pgvector.yml
@@ -67,7 +67,7 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
-          hatch run test -m "not integration"
+          hatch run cov -m "not integration"
 
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
