Add default model for NVIDIA HayStack local NIM endpoints (#915)
* initial embedder code

* default model code

* docs: update model docstring

* tests: add userwarning

* docs: literal lint fix

* review changes

* remove pydantic dependency

* move backend, nim_backend under utils

* move is_hosted to warm_up

* test cases, docstring fix

* error message updation

Co-authored-by: Madeesh Kannan <shadeMe@users.noreply.github.com>

* move is_hosted code to util

* remove backend code

* update import for is_hosted

* remove util and move code to utils

* fix api key issue for failing test cases

* Update integrations/nvidia/tests/conftest.py

---------

Co-authored-by: Madeesh Kannan <shadeMe@users.noreply.github.com>

--- a/integrations/nvidia/pyproject.toml
+++ b/integrations/nvidia/pyproject.toml
@@ -42,7 +42,7 @@ root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/nvidia-v[0-9]*"'
 
 [tool.hatch.envs.default]
-dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "haystack-pydoc-tools"]
+dependencies = ["coverage[toml]>=6.5", "pytest", "pytest-rerunfailures", "haystack-pydoc-tools", "requests_mock"]
 [tool.hatch.envs.default.scripts]
 test = "pytest --reruns 3 --reruns-delay 30 -x {args:tests}"
 test-cov = "coverage run -m pytest --reruns 3 --reruns-delay 30 -x {args:tests}"
@@ -147,6 +147,8 @@ module = [
   "haystack_integrations.*",
   "pytest.*",
   "numpy.*",
+  "requests_mock.*",
+  "pydantic.*"
 ]
 ignore_missing_imports = true
 
