newlines and print

--- a/.github/workflows/CI_license_compliance.yml
+++ b/.github/workflows/CI_license_compliance.yml
@@ -12,7 +12,7 @@ on:
 env:
   CORE_DATADOG_API_KEY: ${{ secrets.CORE_DATADOG_API_KEY }}
   PYTHON_VERSION: "3.10"
-  EXCLUDE_PACKAGES: "(?i)^(deepeval|cohere|fastembed|ragas|haystack-pydoc-tools|tqdm|psycopg).*"
+  EXCLUDE_PACKAGES: "(?i)^(deepeval|cohere|fastembed|ragas|tqdm|psycopg).*"
 
   # Exclusions must be explicitly motivated
   #
@@ -21,9 +21,8 @@ env:
   # - fastembed is Apache 2.0 but the license on PyPI is unclear ("Other/Proprietary License (Apache License)")
   # - ragas is Apache 2.0 but the license is not available on PyPI
 
-  # - haystack-pydoc-tools is Apache 2.0 but the license is not available on PyPI
   # - tqdm is MLP but there are no better alternatives
-  # - psycopg is LGPL-3.0
+  # - psycopg is LGPL-3.0 but FOSSA is fine with it
 
 jobs:
   license_check_direct:
@@ -93,3 +92,4 @@ jobs:
           title: |
             Core integrations license compliance nightly failure: ${{ github.workflow }}
           api-key: ${{ secrets.CORE_DATADOG_API_KEY }}
+          
