fix: pin weaviate-client

--- a/integrations/weaviate/pyproject.toml
+++ b/integrations/weaviate/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "weaviate-client",
+  "weaviate-client>=4.0",
   "haystack-pydoc-tools",
   "python-dateutil",
 ]
