feat: Langfuse - support generation span for more LLMs (#1087)
* Langfuse: support generation span for more LLMs

* Add example instructions

* Avoid instantiation of all generators, only selected

* Linting

* Formatting and naming

* Add integration test for Anthropic

* Add cohere integration test

* Lint

* Parametrize integration test

* Linting

* Simplify test parameters

* Move LLM deps to test env

--- a/integrations/langfuse/pyproject.toml
+++ b/integrations/langfuse/pyproject.toml
@@ -47,6 +47,8 @@ dependencies = [
   "pytest",
   "pytest-rerunfailures",
   "haystack-pydoc-tools",
+  "anthropic-haystack",
+  "cohere-haystack"
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
